# g8os

./: .gitignore  Cargo.toml  LICENSE  Makefile  cargo.toml  x86_64-g8os.json
.cargo/: config
boot/x86_64/: constants.asm  stage0.asm  stage1.asm  stage2.asm
src/: constants.rs  entry.asm  gdt.rs  idt.rs  kernel_const.rs  lib.rs  linker.ld  main.rs  util.rs  vga_buffer.rs
src/console/: mod.rs  sys_log.rs  vga_buffer.rs
src/drivers/: pci.rs
src/memory/: frame_controller.rs  heap_allocator.rs  mod.rs  paging.rs
src/memory/paging/: g8_page_table.rs  mod.rs  page_table.rs  page_table_alloc.rs
src/task/: executor.rs  keyboard.rs  mod.rs  sys_task.rs
