[package]
name = "g8os"
version = "0.1.0"
authors = ["Gary Gan <garyglgan@gmail.com>"]
edition = "2018"

[lib]
name = "g8os"
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.5"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version="0.2.2"
default-features= false
features=["alloc"]

[dependencies.futures-util]
version="0.3.5"
default-features= false
features=["alloc"]

[dependencies.conquer-once]
version="0.2.0"
default-features= false